[package]
name = "gtworld-r"
version = "0.1.0"
edition = "2021"
description = "Growtopia World tile serialization"
repository = "https://github.com/cloei/gtworld-r"
license = "MIT"
readme = "README.md"


[dependencies]
byteorder = "1.5.0"
gtitem-r = { git = "https://github.com/cloei/gtitem-r" }
serde = { version = "1.0.204", features = ["derive"], optional = true }

[dev-dependencies]
image = "0.25.1"
serde_json = "1.0.135"
