[package]
name = "gtworld-r"
version = "0.1.0"
edition = "2021"
description = "Growtopia World tile serialization"
repository = "https://github.com/cloei/gtworld-r"
license = "MIT"
readme = "README.md"
authors = ["Cendy"]


[dependencies]
anyhow = "1.0.99"
bitflags = { version = "2.9.4", features = ["serde"] }
byteorder = "1.5.0"
ciborium = "0.2.2"
gtitem-r = { git = "https://github.com/cloei/gtitem-r" }
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
image = "0.25.1"
serde_json = "1.0.135"
